--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>hellonotfound</title>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>Testing for hellonotfound.art again</p>
+<h1 style="text-align:center;">hellonotfound</h1>
+<p>coming soon</p>
 </body>
 </html>
