--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<name><a href = "#index">[GLADYS LAM]</a></name>
 		<br><br><br>
 		<vg onmouseover = "playFootage()" onmouseout = "stopFootage()"><a href = "#">Videography<br/></a></vg>
-		<reel><a href = "#">CG Reel<br/></a></reel>
+		<reel><a href = "https://www.youtube.com">CG Reel<br/></a></reel>
 		<portfolio><a href = "https://hellonotfound.artstation.com/">Portfolio<br/></a></portfolio>
 		<icons>
 			<icon-a>
