--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 		</video>
 	</div>
 	<div id = "sideMenu" class = "menu">
-		<name><a href = "#index">[GLADYS LAM]</a></name>
+		<name onmouseover = "playFootage()" onmouseout = "stopFootage()"><a href = "#index">[GLADYS LAM]</a></name>
 		<br><br><br>
-		<vg onmouseover = "playFootage()" onmouseout = "stopFootage()"><a href = "#">Videography<br/></a></vg>
+		<vg><a href = "#">Videography<br/></a></vg>
 		<reel><a href = "https://www.youtube.com">CG Reel<br/></a></reel>
 		<portfolio><a href = "https://hellonotfound.artstation.com/">Portfolio<br/></a></portfolio>
 		<icons>
