--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 	<div id = "sideMenu" class = "menu">
 		<name onmouseover = "playFootage()" onmouseout = "stopFootage()"><a href = "#index">[GLADYS LAM]</a></name>
 		<br><br><br>
-		<vg><a href = "#">Videography<br/></a></vg>
-		<reel><a href = "https://www.youtube.com">CG Reel<br/></a></reel>
-		<portfolio><a href = "https://hellonotfound.artstation.com/">Portfolio<br/></a></portfolio>
+		<reel><a href = "https://www.youtube.com">Demo Reel<br/></a></reel>
+		<thp><a href = "https://hellonotfound.artstation.com/">Portfolio<br/></a></thp>
+		<crp><a href = "https://drive.google.com/file/d/1iPIt6cSQLkhsdU3QHcKe-nMDMLtD6hyM/view?usp=drive_link">Resume<br/></a></crp>
 		<icons>
 			<icon-a>
 				<span style="font-size: 25px; color: orange;">
