--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<br><br><br>
 		<reel><a href = "https://www.youtube.com">Demo Reel<br/></a></reel>
 		<thp><a href = "https://hellonotfound.artstation.com/">Portfolio<br/></a></thp>
-		<crp><a href = "https://drive.google.com/file/d/1iPIt6cSQLkhsdU3QHcKe-nMDMLtD6hyM/view?usp=drive_link">Resume<br/></a></crp>
+		<crp><a href = "#">Resume<br/></a></crp>
 		<icons>
 			<icon-a>
 				<span style="font-size: 25px; color: orange;">
