--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 	<div id = "sideMenu" class = "menu">
 		<name onmouseover = "playFootage()" onmouseout = "stopFootage()"><a href = "#index">[GLADYS LAM]</a></name>
 		<br><br><br>
-		<reel><a href = "https://youtu.be/p89AfqAVpIo">Demo Reel<br/></a></reel>
+		<reel><a href = "https://youtu.be/DrZyApuAeis">Demo Reel<br/></a></reel>
 		<thp><a href = "https://hellonotfound.artstation.com/">Portfolio<br/></a></thp>
-		<crp><a href = "https://drive.google.com/file/d/142wGLx169H8YQvM73GWlrFtM7UK1-xbK/view?usp=drive_link">Resume<br/></a></crp>
+		<crp><a href = "https://drive.google.com/file/d/1UiFFWYwVLe6g6wc98o62XN7SzhtbxsNj/view?usp=drive_link">Resume<br/></a></crp>
 		<icons>
 			<icon-a>
 				<span style="font-size: 25px; color: orange;">
