--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<div id = "sideMenu" class = "menu">
 		<name onmouseover = "playFootage()" onmouseout = "stopFootage()"><a href = "#index">[GLADYS LAM]</a></name>
 		<br><br><br>
-		<reel><a href = "https://youtu.be/DrZyApuAeis">Demo Reel<br/></a></reel>
+		<reel><a href = "https://youtu.be/mEgEHOvmlkw">Demo Reel<br/></a></reel>
 		<thp><a href = "https://hellonotfound.artstation.com/">Portfolio<br/></a></thp>
 		<crp><a href = "https://drive.google.com/file/d/1UiFFWYwVLe6g6wc98o62XN7SzhtbxsNj/view?usp=drive_link">Resume<br/></a></crp>
 		<icons>
